fixed vertical align

--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -19,11 +19,12 @@ body {
 //   flex: 1;
 // }
 #footer-black {
-  bottom:-95px;
+  bottom:-70px;
   width:100%;
-  height:95px;
+  height:70px;
   background-color: $payne-grey;
-  padding: 30px 0;
+  padding: 20px 0;
+  vertical-align: center;
 }
 
 
@@ -39,14 +40,18 @@ body {
   margin-bottom: 0;
 }
 #footer-black p {
-  margin-top: 10;
+  // margin-top: 10;
   color: $platinum;
   font-size: 14px;
   margin-right: 30px;
+  margin-bottom: 0;
+  padding-top: 5px;
 }
 #footer-black a:hover {
   opacity: 0.8;
 }
+
+
 
 
 
